# NewRepo

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ContextHolder.cpp  ContextHolder.h  HdyStudentManager.rc  LoginPage.cpp  LoginPage.h  LoginPage.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Resource.qrc  main.cpp
Common/Base/: Defer.hpp  Singleton.hpp
Common/Config/: Config.cpp  Config.h
Common/Notify/: NotifyTipBox.cpp  NotifyTipBox.h  NotifyTipManager.cpp  NotifyTipManager.h
Common/Utils/: CaptchaMaker.cpp  CaptchaMaker.h  Coating.cpp  Coating.h  Utils.cpp  Utils.h
Common/Widgets/: ClickLabel.cpp  ClickLabel.h  HoverButton.cpp  HoverButton.h  MsgBox.cpp  MsgBox.h  MsgBox.ui
Common/Widgets/AvatarChoose/: AvatarChoose.cpp  AvatarChoose.h  AvatarChoose.ui  AvatarChooseBox.cpp  AvatarChooseBox.h
Dao/: DatabaseMap.cpp  DatabaseMap.h  SqlConnection.hpp  UserDao.cpp  UserDao.h
Entity/: User.hpp
Module/Home/: HomePage.cpp  HomePage.h  HomePage.ui  PersonallnfoPage.cpp  PersonallnfoPage.h  PersonallnfoPage.ui
Module/Home/Personallnfo/: PersonallnfoPage.cpp  PersonallnfoPage.h  PersonallnfoPage.ui
Module/Login/: LoginPage.cpp  LoginPage.h  LoginPage.ui
Resources/qss/: style.css
Service/: UserService.cpp  UserService.h
